最適化版の Dockerfile を作成した

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "build-docker": "docker build -t my-app -f ./Dockerfile.initial .",
-    "run-docker": "docker run --rm -it -p 3000:3000 my-app"
+    "build-docker-optimized": "docker build -t my-app -f ./Dockerfile.optimized .",
+    "run-docker": "docker run --rm -d -p 3000:3000 my-app"
   },
   "dependencies": {
     "core-js": "^3.8.3",
